fix_USL: usl interval half and beta changes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -556,7 +556,7 @@
 
 	<string name="delivery_completed">डिलीवरी पूर्ण हुआ </string>
 	<string name="delivery_cancelled">डिलीवरी रद्द हो गयी</string>
-	<string name="cancelled">रद्द हो गयी / गया</string>
+	<string name="cancelled">रद्द हो गया</string>
 	<string name="address">पता</string>
 	<string name="delivered">पहुंचा दिया</string>
 	<string name="delivery_on">डिलिवरी ऑन है</string>
@@ -641,9 +641,9 @@
 	<string name="upload_Documents">Upload Documents</string>
 	<string name="diffrential_pricing_rate">After %1$s Km, distance charge will be \u20B9 %2$s/Km</string>
 	<string name="payment_sent">Payment Sent</string>
-	<string name="estimated_payout">ESTIMATED PAYOUT</string>
-	<string name="this_week_cap">THIS WEEK</string>
-	<string name="ride_history_cap">RIDE HISTORY</string>
+	<string name="estimated_payout">अनुमानित भुगतान</string>
+	<string name="this_week_cap">इस सप्ताह</string>
+	<string name="ride_history_cap">सवारी इतिहास</string>
 	<string name="cancel_ride_by_customer">Customer has cancelled the ride</string>
 	<string name="high_demand_areas">Click here to know high demand areas</string>
 	<string name="high_demad">High Demand Areas</string>
@@ -690,30 +690,31 @@
 	<string name="please_submit">कृपया जमा करें</string>
 	<string name="cancel_audit">क्या आप वास्तव मे ऑडिट रद्द करना चाहते है </string>
 	<string name="image_upload_failed">छवि अपलोड विफल रहा है, कृपया पुनः प्रयास करें</string>
-	<string name="estimated_payout_lower">Estimated Payout</string>
-	<string name="bank_deposite">Bank Deposite</string>
-	<string name="trips">Trips</string>
-	<string name="home">Home</string>
-	<string name="duration">Duration</string>
-	<string name="daily_earnings">DAILY EARNINGS</string>
-	<string name="Invoices_cap">INVOICES</string>
-	<string name="Today_earning">TODAY\'S EARNING</string>
-	<string name="daily_breakup">DAILY BREAKUP</string>
-	<string name="trip_earning">TRIP EARNINGS</string>
-	<string name="earnings_caps">EARNINGS</string>
-	<string name="trip_details">TRIP DETAILS</string>
-	<string name="fare_issues">FARE ISSUES</string>
-	<string name="req_text">If there was an issue with ride fare, please let us know.</string>
-	<string name="type_issue">Type your issue here</string>
-	<string name="report_issue">REPORT FARE ISSUES</string>
-	<string name="id">ID</string>
-	<string name="fair_complaint">Fare Complaint</string>
-	<string name="in_review">IN REVIEW</string>
-	<string name="pool">Pool</string>
-	<string name="no_invoice_currently">No Invoice Currently</string>
-	<string name="no_data">No Data</string>
-	<string name="web_view">WEB VIEW</string>
-	<string name="connection_lost">Connection Loast</string>
+	<string name="estimated_payout_lower">अनुमानित भुगतान</string>
+	<string name="bank_deposite">बैंक जमा</string>
+	<string name="trips">यात्राएं</string>
+	<string name="home">घर</string>
+	<string name="duration">अवधि</string>
+	<string name="daily_earnings">दैनिक आय</string>
+	<string name="Invoices_cap">चालान</string>
+	<string name="Today_earning">आज की कमाई</string>
+	<string name="daily_breakup">दैनिक विवरण</string>
+	<string name="trip_earning">यात्रा कमाई</string>
+	<string name="earnings_caps">कमाई</string>
+	<string name="trip_details">यात्रा विवरण</string>
+	<string name="fare_issues">किराया मुद्दों</string>
+	<string name="req_text">अगर कोई सवारी किराया के साथ मुद्दा था, तो कृपया हमें बताएँ </string>
+	<string name="type_issue">आपकी समस्या यहां लिखें</string>
+	<string name="report_issue"> किराया मुद्दों को रिपोर्ट करें </string>
+	<string name="id">आईडी</string>
+	<string name="fair_complaint">किराये की शिकायत</string>
+	<string name="in_review">समीक्षा में</string>
+	<string name="pool">पूल</string>
+	<string name="no_invoice_currently"> वर्तमान में कोई चालान नही है </string>
+	<string name="no_data">कोई आकड़ा उपलब्ध नहीं है</string>
+	<string name="web_view">वेब अवलोकन</string>
+	<string name="connection_lost">आप कनेक्ट नही है |  पुन: प्रयास करने के लिए यहां टैप करें।</string>
+	<string name="pls_enter_some_msg">Please enter some issue</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
