--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
@@ -657,6 +657,7 @@
     <string name="no_data">No Data</string>
     <string name="web_view">WEB VIEW</string>
     <string name="connection_lost">Connection Loast</string>
+    <string name="pls_enter_some_msg">Please enter some issue</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
