--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -654,6 +654,8 @@
     <string name="web_view">WEB VIEW</string>
     <string name="connection_lost">Connection Loast</string>
     <string name="pls_enter_some_msg">Please enter some issue</string>
+    <string name="enter_destination">Enter Destination</string>
+    <string name="no_results_found">No Result Found</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
