--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -681,6 +681,8 @@
     <string name="web_view">WEB VIEW</string>
     <string name="connection_lost">Connection Loast</string>
     <string name="pls_enter_some_msg">Please enter some issue</string>
+    <string name="enter_destination">Enter Destination</string>
+    <string name="no_results_found">No Result Found</string>
 
 
     <string-array name="CountryCodes" >
