beta_258_multilingual: mutilingual Strngs added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -643,8 +643,8 @@
     <string name="upload_Documents">Upload Documents</string>
     <string name="diffrential_pricing_rate">After %1$s Km, distance charge will be \u20B9 %2$s/Km</string>
     <string name="payment_sent">Payment Sent</string>
-    <string name="estimated_payout">ESTIMATED PAYOUT</string>
-    <string name="this_week_cap">THIS WEEK</string>
+    <string name="estimated_payout"> చెల్లింపునకు అంచనా</string>
+    <string name="this_week_cap">ఈ వారం</string>
     <string name="ride_history_cap">RIDE HISTORY</string>
     <string name="cancel_ride_by_customer">Customer has cancelled the ride</string>
     <string name="high_demand_areas">Click here to know high demand areas</string>
@@ -691,31 +691,33 @@
     <string name="please_submit">సబ్మిట చెయ్యండి</string>
     <string name="cancel_audit">మీరు ఆడిట్ను రద్దు చెయ్యాలని అనుకుంటున్నారా?</string>
     <string name="image_upload_failed">ఫోటో సరిగ్గా రాలేదు. దయచేసి మళ్లీ ప్రయత్నించండి.</string>
-    <string name="estimated_payout_lower">Estimated Payout</string>
-    <string name="bank_deposite">Bank Deposite</string>
-    <string name="trips">Trips</string>
-    <string name="home">Home</string>
-    <string name="duration">Duration</string>
-    <string name="daily_earnings">DAILY EARNINGS</string>
-    <string name="Invoices_cap">INVOICES</string>
-    <string name="Today_earning">TODAY\'S EARNING</string>
-    <string name="daily_breakup">DAILY BREAKUP</string>
-    <string name="trip_earning">TRIP EARNINGS</string>
-    <string name="earnings_caps">EARNINGS</string>
-    <string name="trip_details">TRIP DETAILS</string>
-    <string name="fare_issues">FARE ISSUES</string>
-    <string name="req_text">If there was an issue with ride fare, please let us know.</string>
-    <string name="type_issue">Type your issue here</string>
-    <string name="report_issue">REPORT FARE ISSUES</string>
-    <string name="id">ID</string>
-    <string name="fair_complaint">Fare Complaint</string>
-    <string name="in_review">IN REVIEW</string>
-    <string name="pool">Pool</string>
-    <string name="no_invoice_currently">No Invoice Currently</string>
-    <string name="no_data">No Data</string>
-    <string name="web_view">WEB VIEW</string>
-    <string name="connection_lost">Connection Loast</string>
+    <string name="earnings_caps">సంపాదన</string>
     <string name="pls_enter_some_msg">Please enter some issue</string>
+
+    <string name="estimated_payout_lower"> చెల్లింపునకు అంచనా</string>
+    <string name="bank_deposite">బ్యాంక్ ధరావతు</string>
+    <string name="trips">ట్రిప్స్</string>
+    <string name="home">ఇళ్లు</string>
+    <string name="duration">కాలపరిమానం</string>
+    <string name="daily_earnings">రోజువారీ సంపాదన</string>
+    <string name="Invoices_cap">ఇన్వాయిస్లు</string>
+    <string name="Today_earning">నేటి సంపాదన</string>
+    <string name="daily_breakup">రోజువారీ వేర్పాటు</string>
+    <string name="trip_earning">ట్రిప్ సంపాదనలు</string>
+
+    <string name="trip_details">పర్యటన వివరాలన్నీ</string>
+    <string name="fare_issues">ఛార్జీల సమస్యలు</string>
+    <string name="req_text">రైడ్ ఛార్జీల ఏ రకమైన సమస్య ఉంది ఉంటే, దయచేసి మాకు తెలియజేయండి</string>
+    <string name="type_issue">మీ సమస్య టైప్  చేయి ఇచ్చట</string>
+    <string name="report_issue"> ఛార్జీల సమస్యలు నివేదిక</string>
+    <string name="id">గుర్తింపు ఆధారము</string>
+    <string name="fair_complaint">ఫేర్ ఫిర్యాదు</string>
+    <string name="in_review">సమీక్షలో</string>
+    <string name="pool">కొలను</string>
+    <string name="no_invoice_currently">ప్రస్తుతం ఇన్వాయిస్  లేదు</string>
+    <string name="no_data">సమాచారం లేదు</string>
+    <string name="web_view">వెబ్ వీక్షణ</string>
+    <string name="connection_lost">మీరు కనెక్ట్ కాలేదు. మళ్లీ ప్రయత్నించడానికి ఇక్కడ నొక్కండి.</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
