--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -581,8 +581,8 @@
     <string name="upload_Documents">Upload Documents</string>
     <string name="diffrential_pricing_rate">After %1$s Km, distance charge will be \u20B9 %2$s/Km</string>
     <string name="payment_sent">Payment Sent</string>
-    <string name="estimated_payout">ESTIMATED PAYOUT</string>
-    <string name="this_week_cap">THIS WEEK</string>
+    <string name="estimated_payout">અંદાજિત ચૂકવણી</string>
+    <string name="this_week_cap">આ અઠવાડિયે</string>
     <string name="ride_history_cap">RIDE HISTORY</string>
     <string name="cancel_ride_by_customer">Customer has cancelled the ride</string>
     <string name="high_demand_areas">Click here to know high demand areas</string>
@@ -629,31 +629,34 @@
     <string name="please_submit">સબમિટ કરો</string>
     <string name="cancel_audit"> શું તમે ઓડિટ રદ કરવા માંગો છો?</string>
     <string name="image_upload_failed">છબી અપલોડ નિષ્ફળ, ફરીથી પ્રયત્ન કરો</string>
-    <string name="estimated_payout_lower">Estimated Payout</string>
-    <string name="bank_deposite">Bank Deposite</string>
-    <string name="trips">Trips</string>
-    <string name="home">Home</string>
-    <string name="duration">Duration</string>
-    <string name="daily_earnings">DAILY EARNINGS</string>
-    <string name="Invoices_cap">INVOICES</string>
-    <string name="Today_earning">TODAY\'S EARNING</string>
-    <string name="daily_breakup">DAILY BREAKUP</string>
-    <string name="trip_earning">TRIP EARNINGS</string>
-    <string name="earnings_caps">EARNINGS</string>
-    <string name="trip_details">TRIP DETAILS</string>
-    <string name="fare_issues">FARE ISSUES</string>
-    <string name="req_text">If there was an issue with ride fare, please let us know.</string>
-    <string name="type_issue">Type your issue here</string>
-    <string name="report_issue">REPORT FARE ISSUES</string>
-    <string name="id">ID</string>
-    <string name="fair_complaint">Fare Complaint</string>
-    <string name="in_review">IN REVIEW</string>
-    <string name="pool">Pool</string>
-    <string name="no_invoice_currently">No Invoice Currently</string>
-    <string name="no_data">No Data</string>
-    <string name="web_view">WEB VIEW</string>
-    <string name="connection_lost">Connection Loast</string>
-    <string name="pls_enter_some_msg">Please enter some issue</string>
+    <string name="earnings_caps">કમાણી</string>
+
+    <string name="no_invoice_currently">કોઈ ભરતિયું હાલમાં નથી </string>
+    <string name="no_data">કોઈ ડેટા નથી </string>
+    <string name="web_view">વેબ વ્યુ </string>
+    <string name="connection_lost">તમે કનેક્ટ નથી. ફરીથી પ્રયાસ કરવા માટે અહીં ટેપ કરો.</string>
+    <string name="pls_enter_some_msg">કેટલાક મુદ્દા દાખલ કરો</string>
+
+    <string name="estimated_payout_lower">અંદાજિત ચૂકવણી</string>
+    <string name="bank_deposite">બેન્ક ડિપોઝિટ</string>
+    <string name="trips">મુસાફરી</string>
+    <string name="home">મુખ્ય પૃષ્ઠ</string>
+    <string name="duration">સમયગાળો</string>
+    <string name="daily_earnings">દૈનિક કમાણી</string>
+    <string name="Invoices_cap">ઇન્વૉઇસેસ</string>
+    <string name="Today_earning">આજની  આવક</string>
+    <string name="daily_breakup">દૈનિક ભાંગ્યા</string>
+    <string name="trip_earning">સફરની  કમાણી</string>
+
+    <string name="trip_details">સફર ની વિગતો</string>
+    <string name="fare_issues">ભાડા અંગેના મુદ્દાઓ </string>
+    <string name="req_text">જો ત્યાં સવારીના ભાડાને લઈને તકલીફ હોય તો , કૃપા કરીને અમને જણાવશો.</string>
+    <string name="type_issue">તમારી તકલીફ અહીંયા લખો </string>
+    <string name="report_issue">ભાડાની  તકલીફના અહેવાલ </string>
+    <string name="id">આઈ ડી </string>
+    <string name="fair_complaint">ભાડાની ફરિયાદ</string>
+    <string name="in_review">સમીક્ષામાં</string>
+    <string name="pool">સામુહિક</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
