--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -590,8 +590,8 @@
     <string name="upload_Documents">Upload Documents</string>
     <string name="diffrential_pricing_rate">After %1$s Km, distance charge will be \u20B9 %2$s/Km</string>
     <string name="payment_sent">Payment Sent</string>
-    <string name="estimated_payout">ESTIMATED PAYOUT</string>
-    <string name="this_week_cap">THIS WEEK</string>
+    <string name="estimated_payout">ଅନୁମାନଜନକ ଭଡ଼ା ପଇସା</string>
+    <string name="this_week_cap">ଏଇ ସପ୍ତାହ</string>
     <string name="ride_history_cap">RIDE HISTORY</string>
     <string name="cancel_ride_by_customer">Customer has cancelled the ride</string>
     <string name="high_demand_areas">Click here to know high demand areas</string>
@@ -638,31 +638,33 @@
     <string name="please_submit">ଦୟାକରି ଦାଖଲ କରନ୍ତୁ</string>
     <string name="cancel_audit">ଆପଣ ନିସ୍ଚିତ ଅଛନ୍ତି କି ଯାଂଚ୍ କ୍ୟାନ୍-ସଲ୍ କରିବା ପାଇଁ</string>
     <string name="image_upload_failed">ଫଟୋ ଅପ୍-ଲୋଡ୍ ଫେଲ୍, ପୁଣିଥରେ ଚେସ୍ଟା କରନ୍ତୁ</string>
-    <string name="estimated_payout_lower">Estimated Payout</string>
-    <string name="bank_deposite">Bank Deposite</string>
-    <string name="trips">Trips</string>
-    <string name="home">Home</string>
-    <string name="duration">Duration</string>
-    <string name="daily_earnings">DAILY EARNINGS</string>
-    <string name="Invoices_cap">INVOICES</string>
-    <string name="Today_earning">TODAY\'S EARNING</string>
-    <string name="daily_breakup">DAILY BREAKUP</string>
-    <string name="trip_earning">TRIP EARNINGS</string>
-    <string name="earnings_caps">EARNINGS</string>
-    <string name="trip_details">TRIP DETAILS</string>
-    <string name="fare_issues">FARE ISSUES</string>
-    <string name="req_text">If there was an issue with ride fare, please let us know.</string>
-    <string name="type_issue">Type your issue here</string>
-    <string name="report_issue">REPORT FARE ISSUES</string>
-    <string name="id">ID</string>
-    <string name="fair_complaint">Fare Complaint</string>
-    <string name="in_review">IN REVIEW</string>
-    <string name="pool">Pool</string>
-    <string name="no_invoice_currently">No Invoice Currently</string>
-    <string name="no_data">No Data</string>
-    <string name="web_view">WEB VIEW</string>
-    <string name="connection_lost">Connection Loast</string>
+    <string name="earnings_caps">ରୋଜଗାର</string>
     <string name="pls_enter_some_msg">Please enter some issue</string>
+
+    <string name="estimated_payout_lower">ଅନୁମାନଜନକ ଭଡ଼ା ପଇସା</string>
+    <string name="bank_deposite">ବ୍ୟାଂକ୍ ଜମା</string>
+    <string name="trips">ଭଡ଼ା ଗୁଡ଼ିକ</string>
+    <string name="home">ଘର</string>
+    <string name="duration">ବ୍ୟବଧାନ</string>
+    <string name="daily_earnings">ଦୈନିକ ରୋଜଗାର</string>
+    <string name="Invoices_cap">ଚାଲାଣ ଗୁଡ଼ିକ</string>
+    <string name="Today_earning">ଆଜିର ରୋଜଗାର</string>
+    <string name="daily_breakup">ଦୈନିକ ବିବରଣି</string>
+    <string name="trip_earning">ଭଡ଼ାରୁ ରୋଜଗାର</string>
+
+    <string name="trip_details">ଭଡ଼ା ବିବରଣି</string>
+    <string name="fare_issues">ଭଡ଼ା ପଇସା ସମସ୍ୟା </string>
+    <string name="req_text">ଯଦି ଭଡ଼ା ପଇସା ପାଇଁ କୌଣସି ସମସ୍ୟା ଅଛି,ତାହେଲେ ଆମକୁ ଜଣାନ୍ତୁ</string>
+    <string name="type_issue">ଆପଣଂକର ସମସ୍ୟା ଏଠାରେ ଲେଖନ୍ତୁ</string>
+    <string name="report_issue">ଭଡ଼ା  ପଇସା ପାଇଁ ଅଭିଜୋଗ କରନ୍ତୁ</string>
+    <string name="id">ଆଇଡି</string>
+    <string name="fair_complaint">ଭଡ଼ା ପଇସା ଅଭିଯୋଗ</string>
+    <string name="in_review">ସମିଖ୍ୟା ରେ</string>
+    <string name="pool">ପୁଲ୍</string>
+    <string name="no_invoice_currently">ବର୍ତମାନ୍ କୌଣସି ଚାଲାଣ ନାହିଁ</string>
+    <string name="no_data">କୌଣସି ତଥ୍ୟ ନାହିଁ</string>
+    <string name="web_view">ଓଏବ୍ ଦର୍ଶନ</string>
+    <string name="connection_lost">ଆପଣ କନେକ୍ଟେଡ୍ ନାହାନ୍ତି!ପୁନର୍ବାର ପ୍ରୟାସ କରିବା ପାଇଁ ଟ୍ୟାପ୍ ରେ କ୍ଲିକ୍ କରନ୍ତୁ</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
