--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -666,8 +666,8 @@
     <string name="self_enroled">Self Enroled</string>
     <string name="diffrential_pricing_rate">After %1$s Km, distance charge will be \u20B9 %2$s/Km</string>
     <string name="payment_sent">Payment Sent</string>
-    <string name="estimated_payout">ESTIMATED PAYOUT</string>
-    <string name="this_week_cap">THIS WEEK</string>
+    <string name="estimated_payout">கணக்கிடப்பட்ட பணம்</string>
+    <string name="this_week_cap">இந்த வாரம்</string>
     <string name="ride_history_cap">RIDE HISTORY</string>
     <string name="cancel_ride_by_customer">Customer has cancelled the ride</string>
     <string name="high_demand_areas">Click here to know high demand areas</string>
@@ -716,31 +716,33 @@
     <string name="please_submit">சமர்ப்பிக்கவும்</string>
     <string name="cancel_audit">நீங்கள் தணிக்கை ரத்து செய்ய வேண்டும் என்று உறுதியாக இருக்கிறீர்களா?</string>
     <string name="image_upload_failed">படத்தை பதிவேற்றும் தோல்வி , மீண்டும் முயற்சிக்கவும்</string>
-    <string name="estimated_payout_lower">Estimated Payout</string>
-    <string name="bank_deposite">Bank Deposite</string>
-    <string name="trips">Trips</string>
-    <string name="home">Home</string>
-    <string name="duration">Duration</string>
-    <string name="daily_earnings">DAILY EARNINGS</string>
-    <string name="Invoices_cap">INVOICES</string>
-    <string name="Today_earning">TODAY\'S EARNING</string>
-    <string name="daily_breakup">DAILY BREAKUP</string>
-    <string name="trip_earning">TRIP EARNINGS</string>
-    <string name="earnings_caps">EARNINGS</string>
-    <string name="trip_details">TRIP DETAILS</string>
-    <string name="fare_issues">FARE ISSUES</string>
-    <string name="req_text">If there was an issue with ride fare, please let us know.</string>
-    <string name="type_issue">Type your issue here</string>
-    <string name="report_issue">REPORT FARE ISSUES</string>
-    <string name="id">ID</string>
-    <string name="fair_complaint">Fare Complaint</string>
-    <string name="in_review">IN REVIEW</string>
-    <string name="pool">Pool</string>
-    <string name="no_invoice_currently">No Invoice Currently</string>
-    <string name="no_data">No Data</string>
-    <string name="web_view">WEB VIEW</string>
-    <string name="connection_lost">Connection Loast</string>
-    <string name="pls_enter_some_msg">Please enter some issue</string>
+    <string name="earnings_caps">வருமானம்</string>
+
+    <string name="estimated_payout_lower">கணக்கிடப்பட்ட பணம்</string>
+    <string name="bank_deposite">வங்கி வைப்பு</string>
+    <string name="trips">பயணங்கள்</string>
+    <string name="home">முகப்பு</string>
+    <string name="duration">காலம்</string>
+    <string name="daily_earnings">தினசரி வருமானம்</string>
+    <string name="Invoices_cap">பொருள்</string>
+    <string name="Today_earning">இன்றைய சம்பாதித்து</string>
+    <string name="daily_breakup">தினசரி முறிவுக்குப்</string>
+    <string name="trip_earning">பயணம் சம்பாதித்து</string>
+
+    <string name="trip_details">பயண விவரங்களையும்</string>
+    <string name="fare_issues"> கட்டணம் பிரச்சினைகள்</string>
+    <string name="req_text">சவாரி கட்டணம் ஒரு சிக்கல் இருந்தது என்றால், தயவு செய்து எங்களுக்கு தெரியப்படுத்துங்கள்</string>
+    <string name="type_issue">உங்கள் பிரச்சினை இங்கே தட்டச்சு</string>
+    <string name="report_issue">அறிக்கை கட்டணம் பிரச்சினைகள்</string>
+    <string name="id">அடையாள அட்டை</string>
+    <string name="fair_complaint">ஃபேர் புகார்</string>
+    <string name="in_review">விமர்சனத்தில்</string>
+    <string name="pool">ஷேர் </string>
+    <string name="no_invoice_currently">விலைப்பட்டியல் தற்போது இல்லை </string>
+    <string name="no_data">தகவல் இல்லை</string>
+    <string name="web_view">இணையதள காட்சி </string>
+    <string name="connection_lost">நீங்கள் தொடர்பில்  இல்லை. மீண்டும் முயற்சிக்க, இங்கே தட்டவும்.</string>
+    <string name="pls_enter_some_msg">தயவு செய்து பிரச்சினை நுழைக்க</string>
 
 
     <string-array name="CountryCodes" >
