--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -718,6 +718,7 @@
     <string name="pls_enter_some_msg">Please enter some issue</string>
     <string name="enter_destination">Enter Destination</string>
     <string name="no_results_found">No Result Found</string>
+    <string name="COD">COD</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
