260_beta_merge: merge with feature_ui_v3

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -715,6 +715,10 @@
 	<string name="web_view">वेब अवलोकन</string>
 	<string name="connection_lost">आप कनेक्ट नही है |  पुन: प्रयास करने के लिए यहां टैप करें।</string>
 	<string name="pls_enter_some_msg">Please enter some issue</string>
+	<string name="enter_destination">Enter Destination</string>
+	<string name="no_results_found">No Result Found</string>
+	<string name="COD">COD</string>
+	<string name="auto_accept_message">Customer request has been automatically accepted</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
