--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -542,6 +542,8 @@
 	<string name="current">वर्तमान</string>
 	<string name="get_directions">दिशा निर्देश प्राप्त करें</string>
 	<string name="delivery">वितरण </string>
+	<string name="delivery_caps">वितरण</string>
+
 	<string name="orders_delivered">ऑर्डर डिलीवर कर दिया गया </string>
 	<string name="orders_returned">ऑर्डर लौटे </string>
 	<string name="rate_your_vendor">अपने विक्रेता का मुल्यांकन करें</string>
