--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
@@ -665,6 +665,9 @@
     <string name="COD">COD</string>
     <string name="auto_accept_message">Customer request has been automatically accepted</string>
     <string name="start_ride_alert">If Customer is with you, than please start ride</string>
+    <string name="Reason">Reason</string>
+    <string name="delivery_conf">Are you sure you want to deliver ?</string>
+    <string name="failed">Failed</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
