--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -700,6 +700,7 @@
     <string name="return_reasons_confirmation">Select a reason for failed delivery</string>
     <string name="submit_small">Submit</string>
     <string name="total_cash_collected">Total cash collected</string>
+    <string name="fail">Fail</string>
 
 
     <string-array name="CountryCodes" >
