--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
@@ -677,6 +677,7 @@
     <string name="return_reasons_confirmation">Select a reason for failed delivery</string>
     <string name="submit_small">Submit</string>
     <string name="total_cash_collected">Total cash collected</string>
+    <string name="fail">Fail</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
