--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -704,6 +704,7 @@
     <string name="submit_small">Submit</string>
     <string name="total_cash_collected">Total cash collected</string>
     <string name="fail">Fail</string>
+    <string name="battery_low">Battery level is low. Please plugin to a power source.</string>
 
 
     <string-array name="CountryCodes" >
