--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -739,6 +739,7 @@
     <string name="no_data">సమాచారం లేదు</string>
     <string name="web_view">వెబ్ వీక్షణ</string>
     <string name="connection_lost">మీరు కనెక్ట్ కాలేదు. మళ్లీ ప్రయత్నించడానికి ఇక్కడ నొక్కండి.</string>
+    <string name="battery_low">Battery level is low. Please plugin to a power source.</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
