--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -736,12 +736,12 @@
 	<string name="total_cash_collected">Total cash collected</string>
 	<string name="fail">Fail</string>
 	<string name="required">required</string>
-	<string name="login_here">Already have an driver account? Login Here</string>
-	<string name="i_accept_new">By Signing up you agree to our Terms of Use</string>
+	<string name="login_here">Already have an driver account? <u>Login Here</u></string>
+	<string name="i_accept_new">By Signing up you agree to our <u>Terms of Use</u></string>
 	<string name="nl_otp_please_enter_otp">Please enter your One Time Password sent to</string>
 	<string name="driver">Driver</string>
-	<string name="register_text">
-		<![CDATA[Don’t have an driver account? <u>Register Here</u>]]></string>
+	<string name="register_text">Don’t have an driver account? <u>Register Here</u></string>
+
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
