feature_driver_chat: initial UI created

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -742,6 +742,7 @@
 	<string name="submit_small">Submit</string>
 	<string name="total_cash_collected">Total cash collected</string>
 	<string name="fail">Fail</string>
+	<string name="chat">Chat</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
