--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -680,6 +680,7 @@
     <string name="submit_small">Submit</string>
     <string name="total_cash_collected">Total cash collected</string>
     <string name="fail">Fail</string>
+    <string name="chat">Chat</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
