--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -741,6 +741,7 @@
     <string name="submit_small">Submit</string>
     <string name="total_cash_collected">Total cash collected</string>
     <string name="fail">Fail</string>
+    <string name="chat">Chat</string>
 
 
     <string-array name="CountryCodes" >
