feature_new_login_flow: bug fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -580,7 +580,7 @@
 	<string name="delivery_completed">Delivery Completed</string>
 	<string name="delivery_cancelled">Delivery Cancelled</string>
 
-	<string name="miss_call_otp">Give a Miss Call</string>
+	<string name="miss_call_otp">Give a Missed Call</string>
 	<string name="give_missed_call_dialog_text">Give us a missed call and we will verify your
 		identity
 	</string>
@@ -736,7 +736,7 @@
 	<string name="fail">Fail</string>
 	<string name="required">required</string>
 	<string name="login_here">Already have an driver account? <u>Login Here</u></string>
-	<string name="i_accept_new">By Signing up you agree to our Terms of Use</string>
+	<string name="i_accept_new">By Signing up you agree to our <u>Terms of Use</u></string>
 	<string name="nl_otp_please_enter_otp">Please enter your One Time Password sent to</string>
 	<string name="driver">Driver</string>
 	<string name="register_text">Don’t have an driver account? <u>Register Here</u></string>
