--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -684,8 +684,9 @@
     <string name="i_accept_new">By Signing up you agree to our Terms of Use</string>
     <string name="nl_otp_please_enter_otp">Please enter your One Time Password sent to</string>
     <string name="driver">Driver</string>
-    <string name="register_text">
-        <![CDATA[Don’t have an driver account? <u>Register Here</u>]]></string>
+    <string name="register_text">Don’t have an driver account? <u>Register Here</u></string>
+    <string name="spinner_owned">Owned</string>
+    <string name="spinner_rented">Rented</string>
 
 
     <string-array name="CountryCodes" >
