--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -699,6 +699,8 @@
     <string name="submit_small">Submit</string>
     <string name="total_cash_collected">Total cash collected</string>
     <string name="fail">Fail</string>
+    <string name="spinner_owned">Owned</string>
+    <string name="spinner_rented">Rented</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
