--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -775,6 +775,8 @@
     <string name="driver">Driver</string>
     <string name="register_text">
         <![CDATA[Don’t have an driver account? <u>Register Here</u>]]></string>
+    <string name="spinner_owned">Owned</string>
+    <string name="spinner_rented">Rented</string>
 
 
     <string-array name="CountryCodes" >
