--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -515,11 +515,7 @@
     <string name="enter_less_amount">తక్కువ మొత్తంలో నమోదు చేయండి</string>
     <string name="enter_valid_amount">చెల్లుబాటు అయ్యే మొత్తాన్ని నమోదు చేయండి</string>
     <string name="JUGNOO">JUGNOO</string>
-    <string name="no_language_to_select">Language Option Not Available</string>
     <string name="ride_complete">రైడ్ పూర్తయింది</string>
-    <string name="no_not_verified">Phone Number not verified</string>
-
-    <string name="miss_call_otp">Give a Miss Call</string>
 
 
     <string name="give_missed_call_dialog_text">మాకు ఒక మిస్డ్ కాల్ ఇవ్వండి మేము మీ గుర్తింపుని ద్రువికరిస్తాము</string>
@@ -588,7 +584,6 @@
     <string name="return_subsidy">రిటర్న్ సబ్సిడీ</string>
     <string name="return_distance">రిటర్న్ దూరం</string>
     <string name="delivery_details">డెలివరీ వివరాలు</string>
-    <string name="uploading">Uploading</string>
 
 
     <string name="vehicle_status">వాహనం స్థితి</string>
@@ -700,17 +695,8 @@
     <string name="no_data">సమాచారం లేదు</string>
     <string name="web_view">వెబ్ వీక్షణ</string>
     <string name="connection_lost">మీరు కనెక్ట్ కాలేదు. మళ్లీ ప్రయత్నించడానికి ఇక్కడ నొక్కండి.</string>
-    <string name="required">required</string>
-    <string name="login_here">Already have an driver account? Login Here</string>
-    <string name="i_accept_new">By Signing up you agree to our Terms of Use</string>
-    <string name="nl_otp_please_enter_otp">Please enter your One Time Password sent to</string>
-    <string name="driver">Driver</string>
-    <string name="register_text">
-        <![CDATA[Don’t have an driver account? <u>Register Here</u>]]></string>
 
     <string name="upload_again">Upload Again</string>
-    <string name="self_enroled">Self Enroled</string>
-    <string name="upload_Documents">Upload Documents</string>
     <string name="diffrential_pricing_rate">After %1$s Km, distance charge will be \u20B9 %2$s/Km</string>
     <string name="payment_sent">Payment Sent</string>
 
@@ -740,14 +726,30 @@
     <string name="failed">Failed</string>
     <string name="cash_deposite_conf">Have you deposited cash ?</string>
     <string name="total">Total</string>
-    <string name="order_summary">Order Summary</string>
-    <string name="return_to_merchant">Return to the Merchant</string>
-    <string name="deposite_cash">Have you deposited cash?</string>
-    <string name="deposite_cash_1">Deposit cash</string>
-    <string name="return_reasons_confirmation">Select a reason for failed delivery</string>
-    <string name="submit_small">Submit</string>
-    <string name="total_cash_collected">Total cash collected</string>
-    <string name="fail">Fail</string>
+
+    <string name="order_summary">కొనుగోలు వివరణ</string>
+    <string name="return_to_merchant">వ్యాపారికి తిరిగి ఇవ్వడం</string>
+    <string name="deposite_cash">మీరు నగదు జమ చేశారు?</string>
+    <string name="deposite_cash_1">నగదు ఖాతాలో జమ చేయు మొత్తము</string>
+    <string name="return_reasons_confirmation">విఫలమైంది డెలివరీ కోసం కారణాన్ని ఎంచుకోండి</string>
+    <string name="submit_small">సమర్పించండి</string>
+    <string name="total_cash_collected">మొత్తం నగదు సేకరించిన</string>
+    <string name="fail">ఓడిపోవు</string>
+    <string name="required">అవసరం</string>
+    <string name="login_here">ఇక్కడ లాగిన్</string>
+    <string name="i_accept_new">సైన్ అప్ మీరు మా <u>ఉపయోగ నిబంధనలు</u> అంగీకరిస్తున్నారు</string>
+    <string name="nl_otp_please_enter_otp">పంపిన మీ వన్ టైమ్ పాస్వర్డ్ నమోదు చేయండి</string>
+    <string name="driver">డ్రైవర్</string>
+    <string name="register_text">డ్రైవర్ ఖాతా లేదు? <u>ఇక్కడ నమోదు</u></string>
+
+    <string name="no_language_to_select">భాషా ఎంపిక అందుబాటులో లేదు</string>
+    <string name="no_not_verified">ఫోన్ నంబర్ ధృవీకరించబడలేదు</string>
+    <string name="miss_call_otp">ఒక మిస్ కాల్ లో ఇవ్వండి</string>
+    <string name="uploading">అప్లోడ్ అవుతోంది</string>
+    <string name="self_enroled">నేనే దాఖలు అయినది </string>
+    <string name="upload_Documents">పత్రాలు ఎక్కించిన</string>
+    <string name="spinner_owned">Owned</string>
+    <string name="spinner_rented">Rented</string>
 
 
     <string-array name="CountryCodes" >
