--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -740,6 +740,8 @@
 	<string name="nl_otp_please_enter_otp">Please enter your One Time Password sent to</string>
 	<string name="driver">Driver</string>
 	<string name="register_text">Don’t have an driver account? <u>Register Here</u></string>
+	<string name="spinner_owned">Owned</string>
+	<string name="spinner_rented">Rented</string>
 
 
 	<string-array name="CountryCodes" >
