--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -716,25 +716,25 @@
 	<string name="no_data">कोई आकड़ा उपलब्ध नहीं है</string>
 	<string name="web_view">वेब अवलोकन</string>
 	<string name="connection_lost">आप कनेक्ट नही है |  पुन: प्रयास करने के लिए यहां टैप करें।</string>
-	<string name="pls_enter_some_msg">Please enter some issue</string>
-	<string name="enter_destination">Enter Destination</string>
-	<string name="no_results_found">No Result Found</string>
-	<string name="COD">COD</string>
-	<string name="auto_accept_message">Customer request has been automatically accepted</string>
+	<string name="pls_enter_some_msg">कुछ मुद्दे दर्ज करें</string>
+	<string name="enter_destination">गंतव्य दर्ज करें </string>
+	<string name="no_results_found">कोई परिणाम नहीं मिला</string>
+	<string name="COD">सीओडी</string>
+	<string name="auto_accept_message">ग्राहक अनुरोध स्वचालित रूप से स्वीकार किया गया है</string>
 	<string name="start_ride_alert">If Customer is with you, than please start ride</string>
-	<string name="Reason">Reason</string>
-	<string name="delivery_conf">Are you sure you want to deliver ?</string>
-	<string name="failed">Failed</string>
-	<string name="cash_deposite_conf">Have you deposited cash ?</string>
-	<string name="total">Total</string>
-	<string name="order_summary">Order Summary</string>
-	<string name="return_to_merchant">Return to the Merchant</string>
-	<string name="deposite_cash">Have you deposited cash?</string>
-	<string name="deposite_cash_1">Deposit cash</string>
-	<string name="return_reasons_confirmation">Select a reason for failed delivery</string>
-	<string name="submit_small">Submit</string>
-	<string name="total_cash_collected">Total cash collected</string>
-	<string name="fail">Fail</string>
+	<string name="Reason">कारण</string>
+	<string name="delivery_conf">क्या आप वाकई वितरित करना चाहते हैं?</string>
+	<string name="failed">असफल</string>
+	<string name="cash_deposite_conf">क्या आपने नकदी जमा कर दिया है?</string>
+	<string name="total">कुल</string>
+	<string name="order_summary">ऑर्डर सारांश</string>
+	<string name="return_to_merchant">मर्चेंट पर लौटें</string>
+	<string name="deposite_cash">क्या आपने नकदी जमा कर दिया है?</string>
+	<string name="deposite_cash_1">जमा नकद</string>
+	<string name="return_reasons_confirmation">विफल वितरण के लिए एक कारण का चयन करें</string>
+	<string name="submit_small">जमा करें</string>
+	<string name="total_cash_collected">कुल नकदी एकत्र</string>
+	<string name="fail">असफल</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
