feature_new_pool_ui: switch customer logic created

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -701,6 +701,8 @@
     <string name="fail">Fail</string>
     <string name="spinner_owned">Owned</string>
     <string name="spinner_rented">Rented</string>
+    <string name="select">Select</string>
+    <string name="select_customer">Select Customer</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
