--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -690,6 +690,8 @@
     <string name="upload_Documents"> દસ્તાવેજો અપલોડ કરો</string>
     <string name="spinner_owned">Owned</string>
     <string name="spinner_rented">Rented</string>
+    <string name="select">Select</string>
+    <string name="select_customer">Select Customer</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
