--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -752,6 +752,8 @@
 	<string name="upload_Documents">अपलोड दस्तावेज</string>
 	<string name="spinner_owned">Owned</string>
 	<string name="spinner_rented">Rented</string>
+	<string name="select">Select</string>
+	<string name="select_customer">Select Customer</string>
 
 
 	<string-array name="CountryCodes" >
