--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -742,6 +742,8 @@
 	<string name="register_text">Don’t have an driver account? <u>Register Here</u></string>
 	<string name="spinner_owned">Owned</string>
 	<string name="spinner_rented">Rented</string>
+	<string name="select">Select</string>
+	<string name="select_customer">Select Customer</string>
 
 
 	<string-array name="CountryCodes" >
