--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -618,9 +618,9 @@
 	<string name="return_subsidy">Return Subsidy</string>
 	<string name="return_distance">Return Distance</string>
 	<string name="delivery_details">DELIVERY DETAILS</string>
-	<string name="please_drop_customer">Please drop %s</string>
-	<string name="please_reach_customer_location">Please reach %s\'s location</string>
-	<string name="please_start_customer_ride">Please start %s\'s ride</string>
+	<string name="please_drop_customer">Drop %s</string>
+	<string name="please_reach_customer_location">Reach %s\'s location</string>
+	<string name="please_start_customer_ride">Start %s\'s ride</string>
 	<string name="uploading">UPLOADING</string>
 	<string name="before_ride">BEFORE RIDE</string>
 	<string name="in_ride_rate">IN RIDE</string>
@@ -744,6 +744,9 @@
 	<string name="spinner_rented">Rented</string>
 	<string name="select">Select</string>
 	<string name="select_customer">Select Customer</string>
+	<string name="collect_cash">Collect Cash</string>
+	<string name="pool_start">Pool Start</string>
+	<string name="pool_stop">Pool Stop</string>
 
 
 	<string-array name="CountryCodes" >
