--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -730,6 +730,7 @@
     <string name="spinner_owned">Owned</string>
     <string name="spinner_rented">Rented</string>
     <string name="battery_low">Battery level is low. Please plugin to a power source.</string>
+    <string name="alter_phone_number">Alternate Phone Number</string>
 
 
     <string-array name="CountryCodes" >
