--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -757,6 +757,7 @@
     <string name="collect_cash">Collect Cash</string>
     <string name="pool_start">Pool Start</string>
     <string name="pool_stop">Pool Stop</string>
+    <string name="alter_phone_number">Alternate Phone Number</string>
 
 
     <string-array name="CountryCodes" >
