--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -758,6 +758,8 @@
     <string name="pool_start">Pool Start</string>
     <string name="pool_stop">Pool Stop</string>
     <string name="alter_phone_number">Alternate Phone Number</string>
+    <string name="delivery_start">Delivery Start</string>
+    <string name="delivery_stop">Delivery Stop</string>
 
 
     <string-array name="CountryCodes" >
