--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -625,7 +625,7 @@
 	<string name="before_ride">BEFORE RIDE</string>
 	<string name="in_ride_rate">IN RIDE</string>
 	<string name="referral_rate">REFERRAL</string>
-	<string name="pickup_charges">Pickup Charges</string>
+	<string name="pickup_charges">Pickup Charges </string>
 	<string name="base_fare">Base Fare</string>
 	<string name="distance_per_km">Distance\n(Per Km)</string>
 	<string name="time_per_min">Time\n(per min)</string>
@@ -757,6 +757,7 @@
 	<string name="reg_as_driver"><u>Register as a Jugnoo DRIVER</u></string>
 	<string name="driver_app">DRIVER APPLICATION</string>
 	<string name="register_as_driver">Register as DRIVER</string>
+	<string name="distance_lower">Distance</string>
 
 
 	<string-array name="CountryCodes" >
